<resources>
    <string name="app_name">NewWorlds</string>
    <string name="title_activity_maps">Map</string>
    <string name="titleText">LOCALit</string>
    <string name="planButtonText">Plan a Trip</string>
    <string name="addBizText">Add a Business</string>
    <string name="locationPrompt">Where is your trip?</string>
    <string name="locationInput">Location</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="string">Next</string>
    <string name="preferencesQuestion">What do you want to do?</string>
    <string name="preferences">What do you want to do?</string>
    <string name="whatToDo">What do you want to do?</string>
    <string name="food">Food</string>
    <string name="entertainment">Entertainment</string>
    <string name="businessName">Business Name</string>
    <string name="title_activity_maps_tester">Map</string>
    <string name="logoDescriptor">logo1</string>
    <string name="businessType">Type of Business</string>
    <string name="pictureUpload">Upload a Picture</string>
    <string name="address">Address</string>
    <string name="businessDescription">Description</string>
    <string name="inputBusinessName">Business Name</string>
    <string name="picUpload">Upload</string>
    <string name="itineraryTitle">Itinerary</string>
    <string name="restaurantChoiceText">Restaurant Choice</string>
    <string name="educationChoiceText">Educational Choice</string>
    <string name="entertainmentChoiceText">Entertainment Choice</string>
    <string name="educational">Educational Sites</string>
    <string name="restaurantsLabel">Restaurants</string>
    <string name="entertainmentLabel">Entertainment</string>
    <string name="educationalLabel">Educational Sites</string>
    <string name="options">Your Options</string>
    <string name="restaurant1">Restaurant 1</string>
    <string name="addToItinerary">Add to My Itinerary!</string>
    <string name="entertainment1">Entertainment 1</string>
    <string name="educational1">Educational Site 1</string>

    <string name="addBusinessPageTitle">Add a Business</string>
    <string name="addBusinessPageName">Business Name:</string>
    <string name="addBusinessPageNameInput">Enter Business Name</string>
    <string name="addBusinessPageCategory">Category:</string>
    <string name="addBusinessPageType">Type:</string>
    <string name="addBusinessPageAddress">Address:</string>
    <string name="addBusinessPageAddressInput">Enter the Business Address</string>
    <string name="addBusinessPageOpenHr">Opening Hour:</string>
    <string name="addBusinessPageOpenHrInput">Enter the Business Opening Hour</string>
    <string name="addBusinessPageCloseHr">Closing Hour:</string>
    <string name="addBusinessPageCloseHrInput">Enter the Business Closing Hour</string>

    <string name="newNext">Generate Itineraries</string>

    <string name="one">1. </string>
    <string name="two">2. </string>
    <string name="three">3. </string>

    <string name="checkBox">Add to My Itinerary!</string>
    <string name="checkBox2">Choose this Itinerary!</string>

    <string name="yourItinerary">Your Itinerary!</string>
    <string name="itineraries">Itineraries</string>
    <string name="finalItinerary">Final Itinerary</string>

    <string name="spin">Spinner Example</string>
    <string-array name="food">
        <item>Italian</item>
        <item>American</item>
        <item>African</item>
        <item>Mexican</item>
        <item>Chinese</item>
    </string-array>
    <string name="title_activity_itinerary_plan">ItineraryPlan</string>
    <string-array name="entertainment">
        <item>Concerts</item>
        <item>Parks</item>
        <item>Movie Theaters</item>
        <item>Active Games</item>
    </string-array>
    <string-array name="education">
        <item>Art Museums</item>
        <item>Science Museums</item>
        <item>Historical Museums</item>
        <item>Schools</item>
    </string-array>
    <string name="title_activity_interface">Interface</string>
</resources>
